--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,37 @@
-.content-frame a {
-    display: block;
-    color: #33FF33;
+.main-frame {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 720px;
+    margin: 0 auto;
+  }
+  
+  .logo-frame,
+  .content-frame {
+    border: 1px solid #33FF33;
+    padding: 12px 18px;
+    margin: 5px 0;
+    width: 100%;
+    box-sizing: border-box;
+  }
+    
+  .logo-frame pre {
+    margin: 0;
+    white-space: pre;
+  }
+  
+  .content-frame a {
+    display: inline-block;
     text-decoration: none;
+    color: #33FF33;
     margin: 8px 0;
   }
   
-  .content-frame a:hover {
+  .link-text:hover {
     text-decoration: underline;
+  }
+  
+  .tag-text {
+    padding-left: 4px;
   }
   
