--- a/styles.css
+++ b/styles.css
@@ -90,37 +90,40 @@
 
 
 
-.social-frame {
-  margin-top: 10px;
-  align-self: flex-start;
-  padding-left: 2ch;
-}
-
-.x-link {
-  display: inline-flex;
-  align-items: center;
-  gap: 6px;
-  text-decoration: none;
-  font-family: 'Hack', 'Courier New', monospace;
-  color: #39FF14;
-}
-
-.x-icon {
-  width: 16px;
-  height: 16px;
-  filter: brightness(0) saturate(100%) invert(80%) sepia(98%) hue-rotate(75deg) brightness(120%) contrast(130%);
-}
-
-.x-handle {
-  text-decoration: underline;
-  color: #39FF14;
-}
-
-.x-link:hover .x-handle {
-  text-decoration: none;
-}
+  .social-frame {
+    margin-top: 10px;
+    align-self: flex-start;
+    padding-left: 2ch;
+  }
   
+  .x-link {
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
+    text-decoration: none;
+    font-family: 'Hack', 'Courier New', monospace;
+    color: #39FF14;
+  }
   
+  .x-icon {
+    width: 16px;
+    height: 16px;
+    max-width: 16px;
+    max-height: 16px;
+    display: inline-block;
+    object-fit: contain;
+    filter: brightness(0) saturate(100%) invert(80%) sepia(98%) hue-rotate(75deg) brightness(120%) contrast(130%);
+  }
+  
+  .x-handle {
+    text-decoration: underline;
+    color: #39FF14;
+  }
+  
+  .x-link:hover .x-handle {
+    text-decoration: none;
+  }
+    
 
   
   @keyframes blink {
