--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
     justify-content: center;
   }
   
-  /* === CONTAINER === */
+  /* === MAIN CONTAINER === */
   .main-frame {
     display: flex;
     flex-direction: column;
@@ -26,7 +26,7 @@
     width: 84ch;
   }
   
-  /* === FRAMED BOXES === */
+  /* === BOXES === */
   .logo-frame,
   .content-frame {
     border: 2px solid #39FF14;
@@ -41,9 +41,10 @@
     margin: 0;
     white-space: pre;
     text-align: center;
+    font-size: 16px;
   }
   
-  /* === CONTENT LAYOUT === */
+  /* === CONTENT === */
   .content-frame {
     display: flex;
     flex-direction: column;
@@ -51,7 +52,6 @@
     text-align: center;
   }
   
-  /* === PROJECT LINKS === */
   .project-line {
     display: flex;
     justify-content: center;
@@ -75,7 +75,7 @@
     font-style: normal;
   }
   
-  /* === PROMPT CURSOR === */
+  /* === TERMINAL PROMPT === */
   .prompt-line {
     align-self: flex-start;
     padding-left: 2ch;
@@ -123,7 +123,7 @@
     text-decoration: none;
   }
   
-  /* === MOBILE ADJUSTMENTS === */
+  /* === MOBILE STYLING === */
   @media screen and (max-width: 768px) {
     html, body {
       font-size: 17px;
@@ -138,7 +138,7 @@
     .content-frame {
       overflow-x: auto;
       white-space: pre;
-      font-size: 14px;
+      font-size: 17px;
       border-width: 2px;
     }
   
@@ -150,7 +150,7 @@
     .project-line,
     .prompt-line,
     .x-link {
-      font-size: 16px;
+      font-size: 17px;
     }
   
     .x-icon {
